# filmder-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  settings.toml  techstack.md  techstack.yml
filmder_backend/: app.py
