[tool.poetry]
name = "filmder-backend"
version = "0.1.0"
description = "Backend for filmder app built with Python."
authors = ["bartosz roguski <bartosz.k.roguski@gmail.com>"]
readme = "README.md"
packages = [{include = "filmder_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
