[tool.poetry]
name = "filmder-backend"
version = "0.1.0"
description = "Backend for filmder app built with Python."
authors = ["bartosz roguski <bartosz.k.roguski@gmail.com>"]
readme = "README.md"
packages = [{include = "filmder_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
sqlalchemy = "^2.0.21"
dynaconf = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
